--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "gatsby-plugin-typescript": "^5.9.0",
     "gatsby-source-filesystem": "^5.9.0",
     "gatsby-transformer-sharp": "^5.9.0",
+    "json-server": "^0.17.3",
     "node": "^18.16.0",
+    "node-fetch": "^2.6.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
