single page Product + link to it

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,6 +103,7 @@
   },
   "include": [
     "./src/**/*",
+    "./src/pages",
     "./gatsby-node.ts",
     "./gatsby-config.ts",
     "./plugins/**/*",
